# eggs

./: Cargo.toml  README.md
src/: main.rs
src/algorithms/: hash.rs  mod.rs
src/models/: mod.rs  pcr_simulator.rs
src/ui/: app.rs  boot_replay.rs  hash_calculator.rs  mod.rs
src/utils/: file_processor.rs  mod.rs
