[package]
name = "eggs"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "shellapi", "winbase", "handleapi"] }

[[bin]]
name = "eggs"
path = "src/main.rs"

[dependencies]
eframe = "0.23.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
sha-1 = "0.10.1"
hex = "0.4.3"
libsm = "0.5.1"
rfd = "0.12.1"